# Fuzzing_project

./: .gitignore  CMakeLists.txt  README.md  afl_evaluation.py  found_errors.md
failing_examples/crashing/: id:000000,sig:06,sync:main_small,src:000503  id:000000,sig:11,sync:main_small,src:001524  id:000001,sig:06,src:001210,time:602108,execs:48773,op:havoc,rep:4  id:000001,sig:06,src:001929,time:1536579,execs:25126,op:havoc,rep:8  id:000001,sig:11,src:000660,time:583406,execs:825085,op:havoc,rep:8  id:000005,sig:11,src:001164+001871,time:8492596,execs:279209,op:splice,rep:2  id:000006,sig:06,src:001343+000521,time:909325,execs:114628,op:splice,rep:8  id:000007,sig:06,src:001599,time:8968758,execs:350254,op:havoc,rep:2  id:000008,sig:06,src:000895,time:664378,execs:913008,op:havoc,rep:8  id:000012,sig:11,src:002369+002018,time:21866864,execs:608999,op:splice,rep:4  id:000071,sig:11,src:002265,time:6891949,execs:7678026,op:havoc,rep:4
failing_examples/hangs/: id:000003,src:002480,time:9437455,execs:368407,op:havoc,rep:4  id:000004,src:000847,time:655217,execs:902193,op:havoc,rep:4  id:000005,src:002639,time:18459241,execs:482900,op:havoc,rep:2  id:000006,src:001876,time:11878351,execs:24325324,op:havoc,rep:2  id:000006,src:001994+002559,time:4541357,execs:4131612,op:splice,rep:8
